can-socket/tests/compile-fail/id_negative1.rs
fn main() {
	let _id = can_socket::can_id!(-2);
}
