can-socket/tests/compile-fail/id_negative1.stderr
error[E0600]: cannot apply unary operator `-` to type `u32`
 --> tests/compile-fail/id_negative1.rs:2:32
  |
2 |     let _id = can_socket::can_id!(-2);
  |                                   ^^ cannot apply unary operator `-`
  |
  = note: unsigned values cannot be negated
